--- a/source/weather_service/resource/find.html
+++ b/source/weather_service/resource/find.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Weather Service</h1>
-    <form action="http://127.0.0.1:8080/weather" method="post">
+    <form action="http://localhost/weather" method="post">
         <label for="city">Enter the city:</label>
         <input type="city" id="city" name="city" required>
         <button type="city">Get</button>
